docs: Add comprehensive error handling and defensive programming documentation framework
- Created ERROR_HANDLING_GUIDELINES.md with complete defensive programming patterns based on QueryOptimizationService, ConversationService, and LLMIntegrationService improvements
- Added CONTEXT_ASSEMBLY_ERROR_ANALYSIS.md with practical application examples and thread safety analysis  
- Updated docs/README.md to reference new error handling documentation in development section
- Enhanced main README.md with updated project status and documentation structure
- Established standardized error handling approach with RagException consistency, input validation patterns, and comprehensive testing guidelines

This documentation provides a complete framework for consistent error handling across all services, supporting the defensive programming practices implemented in recent service improvements.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>